picocuda/src/opto/son/snapshots/picoc__son__parser__lexer__composition.snap
---
source: src/son/parser.rs
expression: output
---
[
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "main",
        typ: Alias,
    },
    Token {
        lexeme: "(",
        typ: PuncLeftParen,
    },
    Token {
        lexeme: ")",
        typ: PuncRightParen,
    },
    Token {
        lexeme: "{",
        typ: PuncLeftBrace,
    },
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "x",
        typ: Alias,
    },
    Token {
        lexeme: "=",
        typ: Equals,
    },
    Token {
        lexeme: "8",
        typ: LiteralInt,
    },
    Token {
        lexeme: "+",
        typ: Plus,
    },
    Token {
        lexeme: "9",
        typ: LiteralInt,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "y",
        typ: Alias,
    },
    Token {
        lexeme: "=",
        typ: Equals,
    },
    Token {
        lexeme: "x",
        typ: Alias,
    },
    Token {
        lexeme: "+",
        typ: Plus,
    },
    Token {
        lexeme: "10",
        typ: LiteralInt,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "int",
        typ: KeywordInt,
    },
    Token {
        lexeme: "z",
        typ: Alias,
    },
    Token {
        lexeme: "=",
        typ: Equals,
    },
    Token {
        lexeme: "y",
        typ: Alias,
    },
    Token {
        lexeme: "+",
        typ: Plus,
    },
    Token {
        lexeme: "11",
        typ: LiteralInt,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "return",
        typ: KeywordRet,
    },
    Token {
        lexeme: "z",
        typ: Alias,
    },
    Token {
        lexeme: ";",
        typ: PuncSemiColon,
    },
    Token {
        lexeme: "}",
        typ: PuncRightBrace,
    },
]
